[gd_scene load_steps=8 format=2]

[ext_resource path="res://core/scenes/card.gd" type="Script" id=1]
[ext_resource path="res://assets/art/card_art/arcology.png" type="Texture" id=2]
[ext_resource path="res://core/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/art/card_art/card_back_arcology_deckbuilder_150x240_v1.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.964844, 0.964844, 0.870621, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.117647, 0.592157, 0.733333, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.596078, 0.788235, 0.952941, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0494385, 0.132051, 0.351563, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 75, 120 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="HighlightMouse" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 150.0
margin_bottom = 240.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardDisplay" type="Control" parent="."]
margin_right = 150.0
margin_bottom = 240.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Front" type="Panel" parent="CardDisplay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CardDisplay/Front"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePlate" type="PanelContainer" parent="CardDisplay/Front/VBoxContainer"]
margin_right = 150.0
margin_bottom = 43.0
mouse_filter = 2

[node name="CardName" type="Label" parent="CardDisplay/Front/VBoxContainer/NamePlate"]
margin_left = 7.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 36.0
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.261108, 0.670214, 0.96875, 1 )
text = "Arcology Card - Testing Longer Name"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardArt" type="TextureRect" parent="CardDisplay/Front/VBoxContainer"]
margin_top = 43.0
margin_right = 150.0
margin_bottom = 143.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="TextPlate" type="PanelContainer" parent="CardDisplay/Front/VBoxContainer"]
margin_top = 143.0
margin_right = 150.0
margin_bottom = 240.0
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="CardText" type="Label" parent="CardDisplay/Front/VBoxContainer/TextPlate"]
margin_left = 4.0
margin_top = 4.0
margin_right = 146.0
margin_bottom = 93.0
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.588235, 0.192157, 1 )
text = "Here are the details of what this card might do..."
align = 1
autowrap = true

[node name="Back" type="TextureRect" parent="CardDisplay"]
margin_right = 150.0
margin_bottom = 240.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="CardCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardCollision"]
visible = false
position = Vector2( 75, 120 )
shape = SubResource( 3 )

[node name="CardTween" type="Tween" parent="."]
